# kafka-offsets-parser

./: Cargo.toml  LICENSE
examples/: kafka-offsets-parser.rs
src/: lib.rs  main.rs
