[package]
name = "kafka-offsets-parser"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"
documentation = "https://docs.rs/kafka-offsets-parser"
authors = ["Joe Wilm <joe@jwilm.com>"]
repository = "https://github.com/onesignal/kafka-offsets-parser"
description = "Parsers for offset message and key on __consumer_offsets topic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
thiserror = "1"

[dev-dependencies]
rdkafka = "0.26"
tokio = { version = "1.10", features = ["full"] }
eyre = "0.6"
clap = "2"
log = "0.4"
env_logger = "0.9"
